--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-199.2KB/s(Youtube:不良林), server: 85.208.108.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-702.3KB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-3.66MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-664.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇦 加拿大-679.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-902.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-647.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-627.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-327.0KB/s(Youtube:不良林), server: 85.208.108.20, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-1.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-827.3KB/s(Youtube:不良林), server: 129.150.61.170, port: 29493, type: vmess, uuid: ac0d0076-93d2-48ad-ba6e-ea5c8d7b0132, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.150.61.170}}
+  - {name: 未知国家-1.02MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇯🇵 日本-313.2KB/s(Youtube:不良林), server: 5.183.176.84, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-307.2KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-876.8KB/s(Youtube:不良林), server: u.cvcvcvcv.cyou, port: 26617, type: vmess, uuid: e3238e79-aac4-34bb-a4bd-f956117c95d9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: u.cvcvcvcv.cyou}}
+  - {name: 🇨🇳 中国-3.28MB/s(Youtube:不良林), server: m.cvcvcvcv.cyou, port: 26618, type: vmess, uuid: e3238e79-aac4-34bb-a4bd-f956117c95d9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: m.cvcvcvcv.cyou}}
+  - {name: 🇨🇳 中国-3.47MB/s(Youtube:不良林), server: u.cvcvcvcv.cyou, port: 26618, type: vmess, uuid: e3238e79-aac4-34bb-a4bd-f956117c95d9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: u.cvcvcvcv.cyou}}
+  - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-199.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-664.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-679.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-627.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.3KB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-199.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-664.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-679.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-627.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.3KB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-199.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-664.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-679.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-627.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.3KB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-199.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-664.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-679.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-627.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.3KB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-199.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-664.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-679.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-627.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.3KB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-199.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-664.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-679.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-627.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.3KB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-199.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-664.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-679.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-627.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.3KB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
