--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-150.6KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-992.0KB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: 1aacaa02-0197-11ed-85ac-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
-  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-307.2KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-902.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-3.28MB/s(Youtube:不良林), server: m.cvcvcvcv.cyou, port: 26618, type: vmess, uuid: e3238e79-aac4-34bb-a4bd-f956117c95d9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: m.cvcvcvcv.cyou}}
-  - {name: 🇨🇳 中国-3.47MB/s(Youtube:不良林), server: u.cvcvcvcv.cyou, port: 26618, type: vmess, uuid: e3238e79-aac4-34bb-a4bd-f956117c95d9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: u.cvcvcvcv.cyou}}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 152.70.123.141, port: 80, type: vmess, uuid: 60d31325-3a80-4d82-99d8-ebf3b3108a42, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.70.123.141}}
+  - {name: 🇯🇵 日本-217.8KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇨🇦 加拿大-713.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1.44MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇨🇦 加拿大-511.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇺🇸 美国-830.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-412.6KB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
