--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 152.70.123.141, port: 80, type: vmess, uuid: 60d31325-3a80-4d82-99d8-ebf3b3108a42, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.70.123.141}}
-  - {name: 🇯🇵 日本-217.8KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-334.0KB/s(Youtube:不良林), server: 152.70.123.141, port: 80, type: vmess, uuid: 60d31325-3a80-4d82-99d8-ebf3b3108a42, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.70.123.141}}
   - {name: 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇦 加拿大-713.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-1.44MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇦 加拿大-511.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇨🇦 加拿大-612.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-648.7KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-830.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇯🇵 日本-412.6KB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇳 中国-590.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-312.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-385.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-200.5KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-648.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-648.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-648.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-648.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-648.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-648.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-217.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-511.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-648.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-830.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
